-------------------------------------------------------------
v0.2.2

- Upgrade packages

-------------------------------------------------------------
v0.2.1

- Fix bug: LightGet's timed effects were wrong for
           Hue bridge version 1.65.1964061010
- Upgrade packages

-------------------------------------------------------------
v0.2.0

- Added alembic for database migrations
- Retry up to 3 times on ACDevice authentication error

-------------------------------------------------------------
v0.1.1

- Upgrade packages

-------------------------------------------------------------
v0.1.0

- First version