@@ -61,11 +61,11 @@ class ACDeviceState:
     eco_mode: bool
     turbo_mode: bool
     fahrenheit: bool
+    display_on: bool
 
     # Read only
     indoor_temperature: float
     outdoor_temperature: float
-    display_on: bool
 
     # Write only
     prompt_tone: bool
