@@ -1,8 +1,8 @@
-alembic==1.13.1
+alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 broadlink==0.19.0
-certifi==2024.6.2
+certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.8
@@ -14,11 +14,11 @@ idna==3.7
 ifaddr==0.2.0
 Mako==1.3.5
 MarkupSafe==2.1.5
-msmart-ng==2024.5.4
+msmart-ng==2024.7.0
 pycparser==2.22
 pycryptodome==3.20.0
-pydantic==2.7.4
-pydantic_core==2.18.4
+pydantic==2.8.2
+pydantic_core==2.20.1
 requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.31
